[package]
name = "trustlayer-contracts"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
description = "TrustLayer Soroban smart contracts for business trust scoring on Stellar"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
